🐝 fix: letterSpacing was not correct on accountsNotif accountLine

--- a/src/emails/templates/style.css
+++ b/src/emails/templates/style.css
@@ -4,14 +4,14 @@ h1,h2,h3,h4,h5,h6{
   padding:0;
 }
 
-.transaction {
+.tableRow {
   border-bottom: 1px #d6d8da solid;
   padding: 8px 0;
   line-height: 1.5;
   letter-spacing: 0.5px;
 }
 
-.transaction:last-child {
+.tableRow {
   border-bottom: 0;
 }
 
